--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hookmate/v4-republishing",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "repository": "git@github.com:hookmate/v4-republishing.git",
   "author": "Akshat Mittal <hi@akshatmittal.com>",
   "private": true,
@@ -11,15 +11,18 @@
   },
   "keywords": [],
   "license": "MIT",
-  "packageManager": "pnpm@10.18.3",
+  "packageManager": "pnpm@10.19.0",
   "dependencies": {
     "ky": "^1.13.0",
+    "semver": "^7.7.3",
     "tar": "^7.5.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "zx": "^8.8.5"
   },
   "devDependencies": {
-    "@types/node": "^22.18.12"
+    "@npm/types": "^2.1.0",
+    "@types/node": "^22.18.12",
+    "@types/semver": "^7.7.1"
   }
 }
